--- a/package.json
+++ b/package.json
@@ -1,30 +1,64 @@
 {
-    "name": "api",
+    "name": "chessAi",
     "version": "1.0.0",
     "description": "",
-    "main": "dist/server.js",
+    "author": "Nitin Sharma <nitin.sharma649@gmail.com>",
+    "main": "src/app.ts",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "tsc": "tsc",
         "tsc-dev": "tsc --watch",
         "dev": "tsc --watch && pm2-dev ./dist/server.js",
-        "prod": "tsc && node ./dist/server.js"
+        "prod": "tsc && node ./dist/server.js",
+        "build": "tsc",
+        "start": "cross-env ENV_FILE=./config/.env.prod node -r tsconfig-paths/register ./bin/app.js",
+        "dev-env": "cross-env ENV_FILE=./config/.env.dev ts-node -r tsconfig-paths/register ./src/app.ts",
+        "test:unit": "cross-env ENV_FILE=./config/.env.test jest"
     },
     "keywords": [],
     "author": "Nitin Sharma",
     "license": "ISC",
     "devDependencies": {
-        "typescript": "^3.9.6",
-        "@types/express": "^4.17.2",
-        "@types/mongoose": "^5.5.35",
         "@types/winston": "^2.4.4"
     },
     "dependencies": {
-        "pm2": "^4.4.0",
+        "@types/bcrypt": "^5.0.0",
+        "@types/dotenv-parse-variables": "^2.0.0",
+        "@types/express": "^4.17.12",
+        "@types/jest": "^26.0.23",
+        "@types/jsonwebtoken": "^8.5.1",
+        "@types/mongoose": "^5.10.5",
+        "@types/morgan": "^1.9.2",
+        "@types/node": "^15.6.1",
+        "@types/redis-mock": "^0.17.0",
+        "@types/supertest": "^2.0.11",
+        "@types/typescript": "^2.0.0",
+        "@types/validator": "^13.1.3",
+        "bcrypt": "^5.0.1",
         "body-parser": "^1.19.0",
-        "dotenv": "^8.2.0",
+        "cross-env": "^7.0.3",
+        "dotenv": "^8.6.0",
+        "dotenv-extended": "^2.9.0",
+        "dotenv-parse-variables": "^2.0.0",
         "express": "^4.17.1",
-        "mongoose": "^5.8.3",
+        "faker": "^5.5.3",
+        "http": "0.0.1-security",
+        "jest": "^27.0.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongodb-memory-server": "^6.9.6",
+        "mongoose": "^5.12.11",
+        "morgan": "^1.10.0",
+        "morgan-body": "^2.6.5",
+        "node-cache": "^5.1.2",
+        "pm2": "^4.5.6",
+        "redis": "^3.1.2",
+        "redis-mock": "^0.56.3",
+        "socket.io": "^4.1.2",
+        "supertest": "^6.1.3",
+        "ts-jest": "^27.0.1",
+        "ts-node": "^10.0.0",
+        "tsconfig-paths": "^3.9.0",
+        "typescript": "^4.3.2",
+        "validator": "^13.6.0",
         "winston": "^3.2.1"
     }
 }
