--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@types/validator": "^13.1.3",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
         "cross-env": "^7.0.3",
         "dotenv": "^8.6.0",
         "dotenv-extended": "^2.9.0",
