--- a/config/swarm/docker-compose.yml
+++ b/config/swarm/docker-compose.yml
@@ -4,7 +4,6 @@ version: "3.8"
 networks:
   nginx-reverse: # root nginx-reverse to chessai-server and wp
   api-db: # chessai-server to mongo and redis
-  wp-db: # wp to mysql
 
 # declare all services: nginx-reverse (chessai-server (redis, mongo), wp (mysql))
 services:
@@ -44,7 +43,7 @@ services:
     #       cpus: "1.5"
     #       memory: 256M
     environment:
-      - MONGO_URL=mongodb://mongo/exmpl # 'mongo' is a name (hostname) of container
+      - MONGO_URL=mongodb://mongo/chessAi # 'mongo' is a name (hostname) of container
       - REDIS_URL=redis://redis:6379 # 'redis' is a name (hostname) of container
     networks:
       - nginx-reverse
@@ -75,46 +74,3 @@ services:
       - ../../../docker/mongodb:/data/db:delegated
     networks:
       - api-db
-
-  # 2) WordPress + mysql
-  wp:
-    image: wordpress:latest
-    restart: always
-    # deploy: # uncomment to run multiple chessai-server services
-    #   replicas: 2
-    #   resources:
-    #     limits:
-    #       cpus: "2.0"
-    #       memory: 1024M
-    environment:
-      WORDPRESS_DB_HOST: mysql  # 'mysql' is a name (hostname) of container
-      WORDPRESS_DB_USER: wp
-      WORDPRESS_DB_PASSWORD: your_mysql_pasword
-      WORDPRESS_DB_NAME: wp
-    ports: # exposed ports out of cluster (to fix host name after first launch, and restart)
-      - 8080:80 # comment me after fixing wp hostname
-    networks:
-      - nginx-reverse
-      - wp-db
-    depends_on: # do not start service until dependencies are started
-      - mysql
-
-  mysql:
-    image: mysql:8
-    restart: always
-    deploy:
-      placement: # to run this service on a specific node
-        constraints:
-          - 'node.role == manager'
-    command: "--default-authentication-plugin=mysql_native_password"
-    cap_add: # mbind: Operation not permitted issue
-      - SYS_NICE  # CAP_SYS_NICE
-    environment:
-      MYSQL_ROOT_PASSWORD: your_mysql_root_password
-      MYSQL_DATABASE: wp
-      MYSQL_USER: wp
-      MYSQL_PASSWORD: your_mysql_pasword
-    volumes:
-      - ../../../docker/mysql:/var/lib/mysql
-    networks:
-      - wp-db
