--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "author": "Nitin Sharma <nitin.sharma649@gmail.com>",
     "main": "src/app.ts",
     "scripts": {
-        "build": "tsc",
+        "build": "tsc --build tsconfig.json",
         "start": "cross-env ENV_FILE=./config/.env.prod node -r tsconfig-paths/register ./bin/app.js",
         "devc": "cross-env ENV_FILE=./config/.env.dev ts-node -r tsconfig-paths/register ./src/app.ts",
         "test:unit": "cross-env ENV_FILE=./config/.env.test jest",
@@ -21,6 +21,7 @@
         "@types/bcrypt": "^5.0.0",
         "@types/dotenv-parse-variables": "^2.0.0",
         "@types/express": "^4.17.12",
+        "@types/faker": "^5.5.5",
         "@types/jest": "^26.0.23",
         "@types/jsonwebtoken": "^8.5.1",
         "@types/mongoose": "^5.10.5",
