--- a/tsconfig.json
+++ b/tsconfig.json
@@ -85,5 +85,12 @@
     /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true
     /* Disallow inconsistently-cased references to the same file. */
-  }
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "__mocks__"
+  ]
 }
