--- a/config/.env.prod
+++ b/config/.env.prod
@@ -7,5 +7,5 @@ MONGO_AUTO_INDEX=false
 MORGAN_LOGGER=true
 LOGGER_LEVEL=http
 
-PORT=50000
-CLIENT_URL=http://localhost:3000
+PORT=80
+CLIENT_URL=https://chessai-server.herokuapp.com
