--- a/tsconfig.json
+++ b/tsconfig.json
@@ -52,7 +52,7 @@
     /* Module Resolution Options */
 //    "moduleResolution": "node",
     /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
-    "baseUrl": "src",
+    "baseUrl": "./",
     /* Base directory to resolve non-absolute module names. */
     "paths": {
       "@chessAi/*": [
